[REFAC] MovieDetailService 및 BoxOfficeService 리팩토링
- 공통 JSON 파싱 로직 추가 및 헬퍼 메서드 도입
- MovieDetail DTO 생성 로직 간소화 및 중복 제거
- 불필요한 주석 제거로 가독성 개선
- ObjectMapper 필드 추가 및 유연한 데이터 파싱 지원